# lol

./: Cargo.toml  README.md  justfile
src/: arguments.rs  error.rs  main.rs  prompt.rs
