[package]
name = "lol"
version = "0.0.3"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
categories = ["command-line-utilities"]
description = "ayy lmao"
edition = "2024"
homepage = "https://github.com/casey/lol"
license = "CC0-1.0"
repository = "https://github.com/casey/lol"

[dependencies]
camino = "1.2.2"
clap = { version = "4.5.56", features = ["derive"] }
snafu = "0.8.9"
tempfile = "3.24.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[lints.rust]
unreachable_pub = "deny"

[profile.release]
lto = true
codegen-units = 1
